# SDL2-TG2040

./: .gitignore  CMakeLists.txt  README-TG2040.MD
cmake/: sdlchecks.cmake
cmake/test/: main_lib.c
include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_bits.h  SDL_config.h  SDL_config.h.cmake  SDL_config_minimal.h  SDL_cpuinfo.h  SDL_dummy.h  SDL_endian.h  SDL_main.h  SDL_platform.h  SDL_rwops.h  SDL_stdinc.h  SDL_system.h  SDL_syswm.h  SDL_thread.h  SDL_video.h  begin_code.h  close_code.h
src/: SDL.c  SDL_assert.c  SDL_dummy.c  SDL_internal.h  SDL_log.c
src/atomic/: SDL_atomic.c
src/audio/: SDL_audio.c  SDL_audiocvt.c  SDL_audiotypecvt.c
src/core/linux/: SDL_evdev.c  SDL_evdev.h  SDL_udev.h
src/cpuinfo/: SDL_cpuinfo.c
src/dynapi/: SDL_dynapi.c  SDL_dynapi.h  SDL_dynapi_overrides.h  SDL_dynapi_procs.h
src/events/: SDL_events.c  SDL_events_c.h  SDL_keyboard.c  SDL_keysym_to_scancode.c  SDL_windowevents.c  imKStoUCS.c  scancodes_linux.h
src/file/: SDL_rwops.c
src/filesystem/unix/: SDL_sysfilesystem.c
src/libm/: e_log10.c  s_scalbn.c
src/loadso/dlopen/: SDL_sysloadso.c
src/power/: SDL_power.c
src/render/: SDL_render.c  SDL_sysrender.h  SDL_yuv_sw.c
src/render/software/: SDL_rotate.c
src/stdlib/: SDL_getenv.c  SDL_iconv.c  SDL_malloc.c  SDL_mslibc.c  SDL_stdlib.c  SDL_string.c  SDL_vacopy.h
src/thread/pthread/: SDL_syssem.c  SDL_systhread.c
src/timer/: SDL_timer.c
src/timer/unix/: SDL_systimer.c
src/video/: SDL_blit.c  SDL_blit.h  SDL_blit_A.c  SDL_blit_N.c  SDL_blit_copy.c  SDL_fillrect.c  SDL_stretch.c  SDL_surface.c  SDL_sysvideo.h  SDL_video.c
src/video/fbcon/: SDL_fbcon_video.c  SDL_fbcon_video.h
